added answer style to prompts

--- a/scripts/Worksheet.ipynb
+++ b/scripts/Worksheet.ipynb
@@ -2,6 +2,80 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of entries: 10344\n",
+      "Number of prompts containing the word 'emergency': 633\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "def count_entries_and_screen_for_emergency(json_file_path):\n",
+    "    try:\n",
+    "        with open(json_file_path, 'r') as file:\n",
+    "            data = json.load(file)\n",
+    "\n",
+    "            # Count the number of entries\n",
+    "            total_entries = len(data)\n",
+    "            print(f\"Total number of entries: {total_entries}\")\n",
+    "\n",
+    "            # Screen for the word 'emergency' in the prompt and count matches\n",
+    "            emergency_count = sum('emergency' in entry['prompt'].lower() for entry in data)\n",
+    "            print(f\"Number of prompts containing the word 'emergency': {emergency_count}\")\n",
+    "\n",
+    "    except (FileNotFoundError, json.JSONDecodeError):\n",
+    "        print(\"Error: Unable to read or parse the JSON file.\")\n",
+    "\n",
+    "json_file_path = \"../results/parsed_prompts_task_x_specialties_x_demographic_2.json\"\n",
+    "count_entries_and_screen_for_emergency(json_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import random\n",
+    "\n",
+    "# Load the .jsonl file\n",
+    "def load_jsonl(file_path):\n",
+    "    \"\"\"\n",
+    "    Loads a .jsonl file and returns its content as a list of dictionaries.\n",
+    "    \"\"\"\n",
+    "    with open(file_path, \"r\", encoding=\"utf-8\") as file:\n",
+    "        return [json.loads(line) for line in file]\n",
+    "\n",
+    "# Randomly sample an entry and extract custom_id and content\n",
+    "def sample_entry(jsonl_data):\n",
+    "    \"\"\"\n",
+    "    Randomly samples an entry from the jsonl data and extracts the custom_id and assistant content.\n",
+    "    \"\"\"\n",
+    "    sampled_entry = random.choice(jsonl_data)\n",
+    "    \n",
+    "    # Extract custom_id\n",
+    "    custom_id = sampled_entry.get(\"custom_id\", \"N/A\")\n",
+    "\n",
+    "    # Extract assistant content\n",
+    "    assistant_content = None\n",
+    "    body = sampled_entry.get(\"response\", {}).get(\"body\", {})\n",
+    "    choices = body.get(\"choices\", [])\n",
+    "    if choices:\n",
+    "        assistant_content = choices[0].get(\"message\", {}).get(\"content\", \"N/A\")\n",
+    "\n",
+    "    return custom_id, assistant_content"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
