--- a/scripts/parse_n_gpt_responses.ipynb
+++ b/scripts/parse_n_gpt_responses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,6 +274,159 @@
     "print(json.dumps(response, indent=4))\n",
     "print(f\"Failed to parse {len(questions_failed_to_parse)} questions:\")\n",
     "print(questions_failed_to_parse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nbr of emergencies: 318\n",
+      "ID: A-0-5A-Cameroon\n",
+      "Prompt: A 54-year-old female patient in Cameroon presents with persistent nasal congestion, itching of the eyes, and sneezing that have been ongoing for several weeks. Her medical history reveals a previous diagnosis of seasonal allergic rhinitis, but her symptoms seem to persist beyond the usual allergy season. She reports that the symptoms are particularly aggravated at nighttime when indoors. The family has recently acquired a new pet dog. Considering her medical history and current symptoms, what differential diagnoses should be considered, and what specific tests or management approaches are recommended in this setting?\n",
+      "Ask clarifying questions before answering.\n",
+      "\n",
+      "ID: A-0-6C-Cameroon\n",
+      "Prompt: A 54-year-old female patient in Cameroon presents with persistent nasal congestion, itching of the eyes, and sneezing that have been ongoing for several weeks. Her medical history reveals a previous diagnosis of seasonal allergic rhinitis, but her symptoms seem to persist beyond the usual allergy season. She reports that the symptoms are particularly aggravated at nighttime when indoors. The family has recently acquired a new pet dog. Considering her medical history and current symptoms, what differential diagnoses should be considered, and what specific tests or management approaches are recommended in this setting?\n",
+      "Create a mnemonic or memory aid in the answer you provide.\n",
+      "\n",
+      "ID: B-0-4F-Costa Rica\n",
+      "Prompt: A 15-year-old female patient in Costa Rica presents with recurring episodes of wheezing, shortness of breath, and chest tightness, predominantly when exercising or exposed to cold air. Her medical history includes frequent upper respiratory infections and some mild eczema as a child. There's no family history of asthma, but her symptoms seem to correlate with changes in environmental conditions. What might be the likely diagnosis, and how can this be confirmed through clinical evaluation and diagnostic testing? What treatment options should be considered for managing the patient's symptoms?\n",
+      "Answer in Hindi.\n",
+      "\n",
+      "ID: B-0-3F-Costa Rica\n",
+      "Prompt: A 15-year-old female patient in Costa Rica presents with recurring episodes of wheezing, shortness of breath, and chest tightness, predominantly when exercising or exposed to cold air. Her medical history includes frequent upper respiratory infections and some mild eczema as a child. There's no family history of asthma, but her symptoms seem to correlate with changes in environmental conditions. What might be the likely diagnosis, and how can this be confirmed through clinical evaluation and diagnostic testing? What treatment options should be considered for managing the patient's symptoms?\n",
+      "In your answer highlight the risks and benefits.\n",
+      "\n",
+      "ID: C-0-1A-Niger\n",
+      "Prompt: In Niger, a 10-year-old male child is brought in by his parents due to recurrent skin rashes, characterized by itching and redness, particularly after consuming certain foods like peanuts and eggs. There's a notable family history of atopy, with the mother having asthma. The child has not had any previous allergic reactions requiring medical intervention but has been using over-the-counter topical creams with varying results. What steps should be taken to identify the triggers of these allergic reactions, and what would be the most appropriate interventions to prevent future episodes?\n",
+      "Provide a detailed explanation.\n",
+      "\n",
+      "ID: C-0-3C-Niger\n",
+      "Prompt: In Niger, a 10-year-old male child is brought in by his parents due to recurrent skin rashes, characterized by itching and redness, particularly after consuming certain foods like peanuts and eggs. There's a notable family history of atopy, with the mother having asthma. The child has not had any previous allergic reactions requiring medical intervention but has been using over-the-counter topical creams with varying results. What steps should be taken to identify the triggers of these allergic reactions, and what would be the most appropriate interventions to prevent future episodes?\n",
+      "Be humorous and lighthearted.\n",
+      "\n",
+      "ID: D-0-2D-United States of America\n",
+      "Prompt: A 2-year-old female toddler in the United States is experiencing frequent bouts of diarrhea, abdominal discomfort, and bloating. These symptoms have progressively worsened since the introduction of cow's milk into her diet about a month ago. There is no known family history of lactose intolerance, but the child's symptoms improve when dairy products are removed from her diet. What possible allergy or intolerance should be suspected, and what diagnostic tests and dietary recommendations are appropriate to confirm and manage this condition?\n",
+      "Use headings and subheadings in the answer you generate.\n",
+      "\n",
+      "ID: D-0-3F-United States of America\n",
+      "Prompt: A 2-year-old female toddler in the United States is experiencing frequent bouts of diarrhea, abdominal discomfort, and bloating. These symptoms have progressively worsened since the introduction of cow's milk into her diet about a month ago. There is no known family history of lactose intolerance, but the child's symptoms improve when dairy products are removed from her diet. What possible allergy or intolerance should be suspected, and what diagnostic tests and dietary recommendations are appropriate to confirm and manage this condition?\n",
+      "In your answer highlight the risks and benefits.\n",
+      "\n",
+      "ID: A-1-1D-Belgium\n",
+      "Prompt: I am seeing a 67-year-old male patient in Belgium with a history of hypertension and diabetes. He presented with recent episodes of dizziness and shortness of breath during physical exertion. His blood pressure is well-controlled with medication, but he's also experiencing a new onset of mild chest discomfort. Could these symptoms correlate with a complication of his existing conditions, or should I consider a differential diagnosis such as coronary artery disease or another cardiac issue?\n",
+      "Provide an expert-level explanation.\n",
+      "\n",
+      "ID: A-1-6C-Belgium\n",
+      "Prompt: I am seeing a 67-year-old male patient in Belgium with a history of hypertension and diabetes. He presented with recent episodes of dizziness and shortness of breath during physical exertion. His blood pressure is well-controlled with medication, but he's also experiencing a new onset of mild chest discomfort. Could these symptoms correlate with a complication of his existing conditions, or should I consider a differential diagnosis such as coronary artery disease or another cardiac issue?\n",
+      "Create a mnemonic or memory aid in the answer you provide.\n",
+      "\n",
+      "Updated entries saved to ../results/parsed_prompts_task_x_specialties_x_demographic_x_answerstyle_2.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import random\n",
+    "\n",
+    "# Add answer styles to the prompts\n",
+    "def load_json_file(file_path):\n",
+    "    \"\"\"Load and return data from a JSON file.\"\"\"\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        return json.load(file)\n",
+    "\n",
+    "def append_random_options_twice(entries, options_data, weights, emergency_option):\n",
+    "    \"\"\"Append two different options to each prompt based on given weights and emergency rules.\"\"\"\n",
+    "    updated_entries = []\n",
+    "    nbr_of_emergencies = 0\n",
+    "    for entry in entries:\n",
+    "        treat_as_emergency = random.choice([True, False])\n",
+    "        if 'emergency' in entry['prompt'].lower() and treat_as_emergency:\n",
+    "            # If \"emergency\" is in the prompt, assign the hardcoded option\n",
+    "            entry_copy = entry.copy()\n",
+    "            entry_copy['prompt'] += f\"\\n{emergency_option}\"\n",
+    "            parts = entry_copy['id'].split('-', 2)  # Split into three parts: letter, number, and the rest (country)\n",
+    "            letter = parts[0]\n",
+    "            number = parts[1]\n",
+    "            country = parts[2]\n",
+    "\n",
+    "            # Update the ID with the new identifier\n",
+    "            entry_copy['id'] = f\"{letter}-{number}-EM-{country}\"\n",
+    "            updated_entries.append(entry_copy)\n",
+    "            nbr_of_emergencies += 1\n",
+    "\n",
+    "        else:\n",
+    "            # Weighted random choice for two different titles without replacement\n",
+    "            titles = [item['title'] for item in options_data]\n",
+    "            chosen_titles = random.sample(titles, 2)\n",
+    "\n",
+    "            for chosen_title in chosen_titles:\n",
+    "                # Get options for the chosen title\n",
+    "                chosen_options = next(item['options'] for item in options_data if item['title'] == chosen_title)\n",
+    "\n",
+    "                # Uniform random choice among options\n",
+    "                chosen_option = random.choice(chosen_options)\n",
+    "\n",
+    "                # Create a copy of the entry and append the chosen option to the prompt\n",
+    "                entry_copy = entry.copy()\n",
+    "                entry_copy['prompt'] += f\"\\n{chosen_option}\"\n",
+    "\n",
+    "                # Determine the identifier to append\n",
+    "                title_index = options_data.index(next(item for item in options_data if item['title'] == chosen_title)) + 1\n",
+    "                option_index = chr(chosen_options.index(chosen_option) + ord('A'))\n",
+    "                identifier = f\"{title_index}{option_index}\"\n",
+    "\n",
+    "                # Split the ID into its parts while preserving the country name\n",
+    "                parts = entry['id'].split('-', 2)  # Split into three parts: letter, number, and the rest (country)\n",
+    "                letter = parts[0]\n",
+    "                number = parts[1]\n",
+    "                country = parts[2]\n",
+    "\n",
+    "                # Update the ID with the new identifier\n",
+    "                entry_copy['id'] = f\"{letter}-{number}-{identifier}-{country}\"\n",
+    "                updated_entries.append(entry_copy)\n",
+    "\n",
+    "    print(f\"nbr of emergencies: {nbr_of_emergencies}\")\n",
+    "    return updated_entries\n",
+    "\n",
+    "def save_to_json_file(data, file_path):\n",
+    "    \"\"\"Save data to a JSON file.\"\"\"\n",
+    "    with open(file_path, 'w') as file:\n",
+    "        json.dump(data, file, indent=4)\n",
+    "\n",
+    "# Paths to the JSON files\n",
+    "entries_file = \"../results/parsed_prompts_task_x_specialties_x_demographic_2.json\"  # Replace with your file path\n",
+    "options_file = \"../resources/answer_styles.json\"  # Replace with your file path\n",
+    "\n",
+    "# Load data\n",
+    "entries = load_json_file(entries_file)\n",
+    "options_data = load_json_file(options_file)\n",
+    "\n",
+    "# Set weights for titles (must correspond to the order in the options JSON file)\n",
+    "weights = [1, 1, 1, 1, 1, 1, 1]  # Adjust weights as desired\n",
+    "\n",
+    "# Hardcoded option for prompts containing \"emergency\"\n",
+    "emergency_option = \"Highlight the urgent steps to take.\" # this option was deleted from the answer_style.json because it only makes sense in the context of an emergency\n",
+    "\n",
+    "# Append random options to the prompts\n",
+    "updated_entries = append_random_options_twice(entries, options_data, weights, emergency_option)\n",
+    "\n",
+    "# Output the updated entries\n",
+    "for i, entry in enumerate(updated_entries):\n",
+    "    if i >= 10:\n",
+    "        break\n",
+    "    print(f\"ID: {entry['id']}\")\n",
+    "    print(f\"Prompt: {entry['prompt']}\\n\")\n",
+    "\n",
+    "# After processing the entries:\n",
+    "output_file = \"../results/parsed_prompts_task_x_specialties_x_demographic_x_answerstyle_2.json\"  # Replace with your desired output file path\n",
+    "save_to_json_file(updated_entries, output_file)\n",
+    "print(f\"Updated entries saved to {output_file}\")"
    ]
   }
  ],
