started to work on get_multiturn_style_additional function

--- a/scripts/Worksheet.ipynb
+++ b/scripts/Worksheet.ipynb
@@ -2,15 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "math.floor(840/199)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of entries: 10344\n",
-      "Number of prompts containing the word 'emergency': 633\n"
+      "The file contains 21 entries.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Function to load and count entries in a .json file\n",
+    "def count_entries(file_path):\n",
+    "    \"\"\"\n",
+    "    Reads a .json file and counts the number of entries.\n",
+    "    \"\"\"\n",
+    "    with open(file_path, \"r\", encoding=\"utf-8\") as file:\n",
+    "        data = json.load(file)\n",
+    "        return len(data)\n",
+    "\n",
+    "file_path = \"../resources/medical_professions.json\"  # Replace with the actual path to your .json file\n",
+    "entry_count = count_entries(file_path)\n",
+    "print(f\"The file contains {entry_count} entries.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of entries: 20395\n",
+      "Number of prompts containing the word 'emergency': 973\n"
      ]
     }
    ],
@@ -33,50 +84,63 @@
     "    except (FileNotFoundError, json.JSONDecodeError):\n",
     "        print(\"Error: Unable to read or parse the JSON file.\")\n",
     "\n",
-    "json_file_path = \"../results/parsed_prompts_task_x_specialties_x_demographic_2.json\"\n",
+    "json_file_path = \"../results/parsed_prompts_task_x_specialties_x_demographic_x_answerstyle_2.json\"\n",
     "count_entries_and_screen_for_emergency(json_file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID: A-1092-3F-North Macedonia\n",
+      "Prompt: How can I explain the condition of plantar fasciitis to a 35-year-old female patient in North Macedonia, in simple terms, including why it causes heel pain and what treatment options, such as stretching exercises or orthotics, are available to manage the condition?\n",
+      "In your answer highlight the risks and benefits.\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import random\n",
     "\n",
-    "# Load the .jsonl file\n",
-    "def load_jsonl(file_path):\n",
+    "# Load the .json file\n",
+    "def load_json(file_path):\n",
     "    \"\"\"\n",
-    "    Loads a .jsonl file and returns its content as a list of dictionaries.\n",
+    "    Loads a .json file and returns its content as a list of dictionaries.\n",
     "    \"\"\"\n",
     "    with open(file_path, \"r\", encoding=\"utf-8\") as file:\n",
-    "        return [json.loads(line) for line in file]\n",
+    "        return json.load(file)\n",
     "\n",
-    "# Randomly sample an entry and extract custom_id and content\n",
-    "def sample_entry(jsonl_data):\n",
+    "# Randomly sample an entry and extract id and prompt\n",
+    "def sample_entry(json_data):\n",
     "    \"\"\"\n",
-    "    Randomly samples an entry from the jsonl data and extracts the custom_id and assistant content.\n",
+    "    Randomly samples an entry from the JSON data and extracts the id and prompt.\n",
     "    \"\"\"\n",
-    "    sampled_entry = random.choice(jsonl_data)\n",
+    "    sampled_entry = random.choice(json_data)\n",
     "    \n",
-    "    # Extract custom_id\n",
-    "    custom_id = sampled_entry.get(\"custom_id\", \"N/A\")\n",
+    "    # Extract id\n",
+    "    entry_id = sampled_entry.get(\"id\", \"N/A\")\n",
     "\n",
-    "    # Extract assistant content\n",
-    "    assistant_content = None\n",
-    "    body = sampled_entry.get(\"response\", {}).get(\"body\", {})\n",
-    "    choices = body.get(\"choices\", [])\n",
-    "    if choices:\n",
-    "        assistant_content = choices[0].get(\"message\", {}).get(\"content\", \"N/A\")\n",
+    "    # Extract prompt\n",
+    "    prompt = sampled_entry.get(\"prompt\", \"N/A\")\n",
     "\n",
-    "    return custom_id, assistant_content"
+    "    return entry_id, prompt\n",
+    "\n",
+    "file_path = \"../results/parsed_prompts_task_x_specialties_x_demographic_x_answerstyle_2.json\"  # Replace with the actual path to your .json file\n",
+    "json_data = load_json(file_path)\n",
+    "\n",
+    "# Sample an entry and print the id and prompt\n",
+    "entry_id, prompt = sample_entry(json_data)\n",
+    "print(f\"ID: {entry_id}\\nPrompt: {prompt}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
