--- a/scripts/multiturn_get_batch_prompts.ipynb
+++ b/scripts/multiturn_get_batch_prompts.ipynb
@@ -15,13 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "from tqdm import tqdm\n",
-    "from multiturn_modul import MultiturnStyle, get_multiturn_style\n",
+    "from multiturn_modul import MultiturnStyle, get_multiturn_style, find_profession_by_specialty\n",
     "import pandas as pd\n",
     "import random"
    ]
@@ -65,7 +65,7 @@
     "# Creates randomly system prompts for the user and the chatbot\n",
     "\n",
     "# Path for input data and to store prompts\n",
-    "initial_prompts_name = \"tasks_x_subtopics_part2\"\n",
+    "initial_prompts_name = \"task_x_specialties_x_demographic_x_answerstyle_2\"\n",
     "initial_prompts_path = \"../results/parsed_prompts_\" + initial_prompts_name + \".json\"\n",
     "output_path = \"../results/situations_\" + initial_prompts_name + \".jsonl\"\n",
     "\n",
@@ -85,6 +85,12 @@
     "        if initial_prompts_name == \"specialty_x_domain\":\n",
     "            profession, specialty, domain = initial_prompt[\"context\"].lower().split(\",\")\n",
     "            multiturn_style = get_multiturn_style(id=id, sampled_country=sampled_country, profession=profession, specialty=specialty, domain=domain)\n",
+    "        elif initial_prompts_name == \"task_x_specialties_x_demographic_x_answerstyle_2\":\n",
+    "            context = initial_prompt[\"context\"]\n",
+    "            multiturn_style = get_multiturn_style_add(id=id, context=context)\n",
+    "            \n",
+    "            profession = find_profession_by_specialty(file_path=\"../resources/medical_professions.json\", specialty=specialty)\n",
+    "\n",
     "        else:\n",
     "            multiturn_style = get_multiturn_style(id=id, sampled_country=sampled_country)\n",
     "\n",
