removed large and unnecessary files

--- a/scripts/multiturn_get_batch_prompts.ipynb
+++ b/scripts/multiturn_get_batch_prompts.ipynb
@@ -65,7 +65,7 @@
     "# Creates randomly system prompts for the user and the chatbot\n",
     "\n",
     "# Path for input data and to store prompts\n",
-    "initial_prompts_name = \"task_x_specialties_x_demographic_x_answerstyle_2\"\n",
+    "initial_prompts_name = \"task_x_specialties_x_demographic_x_answerstyle\"\n",
     "initial_prompts_path = \"../results/parsed_prompts_\" + initial_prompts_name + \".json\"\n",
     "output_path = \"../results/situations_\" + initial_prompts_name + \".jsonl\"\n",
     "\n",
@@ -78,7 +78,7 @@
     "\n",
     "print(\"Creating list of situations and initial prompts\")\n",
     "\n",
-    "with ###open(output_path, 'w') as file: ### only remove if the situations are new and the situations file is never used anywhere\n",
+    "with open(output_path, 'w') as file: ### only remove if the situations are new and the situations file is never used anywhere\n",
     "    for initial_prompt in tqdm(initial_prompts_list):\n",
     "        sampled_country = random.choice(countries.iloc[:, 0].tolist())\n",
     "        id = initial_prompt[\"id\"]\n",
