--- a/scripts/multiturn_test.ipynb
+++ b/scripts/multiturn_test.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,21 +61,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [02:32<00:00,  6.57it/s]"
+      "100%|██████████| 1000/1000 [02:39<00:00,  6.26it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You are a medical AI chatbot designed to assist health care workers working in Singapore by answering their questions. \n",
+      "You are a medical AI chatbot designed to assist health care workers working in Lithuania by answering their questions. \n",
       "The style of your answers must follow these rules: \n",
       "- Respectful, polite interaction: You must always engage in a respectful, polite, and courteous manner, maintaining professionalism in all interactions.\n",
       "- Honest, evidence-based information: All responses have to be based on the latest medical evidence and guidelines\n",
@@ -83,12 +83,16 @@
       "- Dosage: If asked about dosage medication, provide a ballpark estimate of the dosage but always provide a concise warning that this should be checked in the form of “(dosages should be verified)”.\n",
       "- Adhere meticulously to any specific formatting instructions provided by the user in the prompt, ensuring the generated output aligns precisely with their requirements.\n",
       "- Tailor responses to the geographical context, resource setting, level of care, seasonality/epidemiology, and medical specialty as relevant.\n",
-      "\n",
-      "You are a Physical Therapist specialized in Sports working in Singapore using a medical AI chatbot to help you taking care of your patients. \n",
+      "- Use simple and easy-to-understand language, avoiding overly complex scientific terms. \n",
+      "In the prompt you see the whole chat history. You are (chatbot). Your task is to answer the questions and only ask follow up questions, if the user did not provide enough information in its input. \n",
+      "Your (chatbot) tag is added manually, don't write it in your output. Just generate an answer to the users input\n",
+      "You are a Orthotist and Prosthetist specialized in Pediatric Prosthetics and Orthotics working in Lithuania using a medical AI chatbot to help you taking care of your patients. \n",
       "The initial question that you ask the medical AI chatbot has already been provided. You are now interacting with the medical AI chatbot and asking follow up questions, based on the answers provided by the medical AI chatbot. \n",
       "The style of the follow up question you ask must follow these rules: \n",
-      "\n",
-      "A-254-5A-Singapore\n"
+      "- Ask short and concises questions. \n",
+      "In the prompt you see the whole chat history. You are (user). You want to get an answer to the first question you asked. Your task is to ask followup questions and to interact with the chatbot to get a clear answer to your initial, as a health care worker would do. \n",
+      "Your (user) tag is added manually, don't write it in your output. Just generate a question or an instruction for the chatbot, based on the conversation history\n",
+      "D-2113-2B-Lithuania\n"
      ]
     },
     {
@@ -143,7 +147,7 @@
     "\n",
     "id = \"\"\n",
     "for i in tqdm(range(1000)):\n",
-    "    id, context = sample_json_entry(\"../results/parsed_prompts_task_x_specialties_x_demographic_x_answerstyle_2.json\")\n",
+    "    id, context = sample_json_entry(\"../results/parsed_prompts_task_x_specialties_x_demographic_x_answerstyle.json\")\n",
     "    test = get_multiturn_style_additional(id, context)\n",
     "    test.system_prompt_chatbot()\n",
     "    test.system_prompt_user()\n",
