--- a/scripts/Worksheet.ipynb
+++ b/scripts/Worksheet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -33,6 +33,8 @@
     }
    ],
    "source": [
+    "# Test situations\n",
+    "\n",
     "import json\n",
     "import random\n",
     "\n",
