--- a/scripts/multiturn_get_batch_prompts.ipynb
+++ b/scripts/multiturn_get_batch_prompts.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -42,14 +42,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20395/20395 [00:06<00:00, 3189.30it/s]"
+      "100%|██████████| 20395/20395 [00:07<00:00, 2758.74it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Up to D-2586-6B-Burkina Faso prompts with situations saved to ../results/situations_task_x_specialties_x_demographic_x_answerstyle_2.jsonl\n"
+      "Up to D-2586-6B-Burkina Faso prompts with situations saved to ../results/situations_task_x_specialties_x_demographic_x_answerstyle.jsonl\n"
      ]
     },
     {
@@ -78,7 +78,7 @@
     "\n",
     "print(\"Creating list of situations and initial prompts\")\n",
     "\n",
-    "with open(output_path, 'w') as file: ### only remove if the situations are new and the situations file is never used anywhere\n",
+    "with open(###output_path, 'w') as file: ### only remove if the situations are new and the situations file is never used anywhere\n",
     "    for initial_prompt in tqdm(initial_prompts_list):\n",
     "        sampled_country = random.choice(countries.iloc[:, 0].tolist())\n",
     "        id = initial_prompt[\"id\"]\n",
@@ -86,7 +86,7 @@
     "            profession, specialty, domain = initial_prompt[\"context\"].lower().split(\",\")\n",
     "            multiturn_style = get_multiturn_style(id=id, sampled_country=sampled_country, profession=profession, specialty=specialty, domain=domain)\n",
     "            print(\"error\")\n",
-    "        elif initial_prompts_name == \"task_x_specialties_x_demographic_x_answerstyle_2\":\n",
+    "        elif initial_prompts_name == \"task_x_specialties_x_demographic_x_answerstyle\":\n",
     "            context = initial_prompt[\"context\"]\n",
     "            multiturn_style = get_multiturn_style_additional(id=id, context=context)\n",
     "        else:\n",
@@ -111,21 +111,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20395/20395 [00:00<00:00, 95590.76it/s]"
+      "100%|██████████| 20395/20395 [00:00<00:00, 100462.52it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The file to store the multiturn conversations for task_x_specialties_x_demographic_x_answerstyle_2 has been created\n",
+      "The file to store the multiturn conversations for task_x_specialties_x_demographic_x_answerstyle has been created\n",
       "The file contains the initial prompt.\n"
      ]
     },
@@ -141,13 +141,13 @@
     "# Create initial multiturn_situation .jsonl\n",
     "# Function to get the initial prompt\n",
     "\n",
-    "situations_name = \"task_x_specialties_x_demographic_x_answerstyle_2\"\n",
+    "situations_name = \"task_x_specialties_x_demographic_x_answerstyle\"\n",
     "\n",
     "situations_path = \"../results/situations_\" + situations_name + \".jsonl\"\n",
     "output_path = \"../results/multiturn_\" + situations_name + \".jsonl\"\n",
     "\n",
     "multiturn_conversations = []\n",
-    "with ###open(situations_path, 'r') as file: ### do only exectue if it is the first time\n",
+    "with open(situations_path, 'r') as file: ### do only exectue if it is the first time\n",
     "    for entry in file:\n",
     "        data = json.loads(entry)\n",
     "        line = {\n",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -196,22 +196,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20395/20395 [00:00<00:00, 28415.74it/s]"
+      "100%|██████████| 20395/20395 [00:00<00:00, 22022.89it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "batch of 20395 prompts saved to ../results/batched_prompts_task_x_specialties_x_demographic_x_answerstyle_2_turn_1c.jsonl\n",
+      "batch of 20395 prompts saved to ../results/batched_prompts_task_x_specialties_x_demographic_x_answerstyle_turn_1c.jsonl\n",
       "IMPORTANT: batches were created for turn 1 and chatbot\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
@@ -222,7 +215,7 @@
     "gpt_model = \"gpt-4o\"\n",
     "\n",
     "# Path for input data and to store prompts\n",
-    "situations_name = \"task_x_specialties_x_demographic_x_answerstyle_2\" # Change this\n",
+    "situations_name = \"task_x_specialties_x_demographic_x_answerstyle\" # Change this\n",
     "situations_path = \"../results/situations_\" + situations_name + \".jsonl\"\n",
     "multiturn_conv_path = \"../results/multiturn_\" + situations_name + \".jsonl\"\n",
     "turn = 1 # can be 1, 2 or 3 # Change this\n",
