--- a/scripts/multiturn_test.ipynb
+++ b/scripts/multiturn_test.ipynb
@@ -22,7 +22,7 @@
     "from openai import OpenAI\n",
     "import random\n",
     "import pandas as pd\n",
-    "from multiturn_modul import MultiturnStyle, get_multiturn_style_additional\n",
+    "from multiturn_modul import MultiturnStyle, get_multiturn_style_additional, get_multiturn_style\n",
     "\n",
     "path_to_api_key: str = \"../API_KEY.txt\"\n",
     "my_api_key = open(path_to_api_key, 'r').read()\n",
@@ -32,21 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'get_multiturn_style' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mid\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0-122\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m100000\u001b[39m):\n\u001b[1;32m----> 7\u001b[0m     test \u001b[38;5;241m=\u001b[39m get_multiturn_style(\u001b[38;5;28mstr\u001b[39m(i\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m12\u001b[39m)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-112\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSwitzerland\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      8\u001b[0m     test\u001b[38;5;241m.\u001b[39msystem_prompt_chatbot()\n\u001b[0;32m      9\u001b[0m     test\u001b[38;5;241m.\u001b[39msystem_prompt_user()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'get_multiturn_style' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test get_multiturn_style\n",
     "countries = pd.read_csv(\"../resources/countries_by_income_category.csv\")\n",
@@ -68,14 +56,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [02:39<00:00,  6.26it/s]"
+      "  0%|          | 0/1000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [02:26<00:00,  6.82it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You are a medical AI chatbot designed to assist health care workers working in Lithuania by answering their questions. \n",
+      "You are a medical AI chatbot designed to assist health care workers working in Uruguay by answering their questions. \n",
       "The style of your answers must follow these rules: \n",
       "- Respectful, polite interaction: You must always engage in a respectful, polite, and courteous manner, maintaining professionalism in all interactions.\n",
       "- Honest, evidence-based information: All responses have to be based on the latest medical evidence and guidelines\n",
@@ -83,16 +78,17 @@
       "- Dosage: If asked about dosage medication, provide a ballpark estimate of the dosage but always provide a concise warning that this should be checked in the form of “(dosages should be verified)”.\n",
       "- Adhere meticulously to any specific formatting instructions provided by the user in the prompt, ensuring the generated output aligns precisely with their requirements.\n",
       "- Tailor responses to the geographical context, resource setting, level of care, seasonality/epidemiology, and medical specialty as relevant.\n",
+      "- The user is using you (the medical AI chatbot) during a medical emergency. Provide short, concise, and well-structured answers. Your responses must be clear and easy to understand in high-pressure and stressful environments. \n",
       "- Use simple and easy-to-understand language, avoiding overly complex scientific terms. \n",
       "In the prompt you see the whole chat history. You are (chatbot). Your task is to answer the questions and only ask follow up questions, if the user did not provide enough information in its input. \n",
       "Your (chatbot) tag is added manually, don't write it in your output. Just generate an answer to the users input\n",
-      "You are a Orthotist and Prosthetist specialized in Pediatric Prosthetics and Orthotics working in Lithuania using a medical AI chatbot to help you taking care of your patients. \n",
+      "You are a physician working in Uruguay using a medical AI chatbot to help you taking care of your patients. \n",
       "The initial question that you ask the medical AI chatbot has already been provided. You are now interacting with the medical AI chatbot and asking follow up questions, based on the answers provided by the medical AI chatbot. \n",
       "The style of the follow up question you ask must follow these rules: \n",
-      "- Ask short and concises questions. \n",
+      "- You (the physician using the medical AI chatbot) are using the medical AI chatbot during a medical emergency. Ask short and quickly written questions. \n",
       "In the prompt you see the whole chat history. You are (user). You want to get an answer to the first question you asked. Your task is to ask followup questions and to interact with the chatbot to get a clear answer to your initial, as a health care worker would do. \n",
       "Your (user) tag is added manually, don't write it in your output. Just generate a question or an instruction for the chatbot, based on the conversation history\n",
-      "D-2113-2B-Lithuania\n"
+      "C-2356-4L-Uruguay\n"
      ]
     },
     {
@@ -158,16 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "B-1124-4C-Mexico\n",
-      "How can I effectively explain the causes and symptoms of acne to a 15-year-old male patient in Mexico, and what treatment options might be suitable for him at this stage, including any potential side effects he should be aware of?\n",
-      "Answer in French.\n"
+      "C-319-4G-Togo\n",
+      "We have a 65-year-old male patient in Togo who recently underwent a transfemoral amputation due to complications from type 2 diabetes. Currently, he has moderate levels of physical activity and is being evaluated for his first prosthetic fitting. His medical history includes peripheral vascular disease and hypertension. What insights can the predictive analytics model provide regarding his risk for postoperative complications, such as poor wound healing or cardiovascular events, as well as his anticipated rehabilitation progress and prosthetic success within the first year post-fitting?\n",
+      "Answer in Spanish.\n"
      ]
     }
    ],
@@ -243,13 +239,13 @@
     "system_prompt_chatbot = test.system_prompt_chatbot()\n",
     "system_prompt_user = test.system_prompt_user()  \n",
     "print(id)\n",
-    "initial_prompt = get_prompt_by_id(id, \"../results/parsed_prompts_task_x_specialties_x_demographic_x_answerstyle_2.json\")\n",
+    "initial_prompt = get_prompt_by_id(id, \"../results/parsed_prompts_task_x_specialties_x_demographic_x_answerstyle.json\")\n",
     "print(initial_prompt)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +253,7 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "chatbot: You are a medical AI chatbot designed to assist health care workers working in Mexico by answering their questions. \n",
+      "chatbot: You are a medical AI chatbot designed to assist health care workers working in Togo by answering their questions. \n",
       "The style of your answers must follow these rules: \n",
       "- Respectful, polite interaction: You must always engage in a respectful, polite, and courteous manner, maintaining professionalism in all interactions.\n",
       "- Honest, evidence-based information: All responses have to be based on the latest medical evidence and guidelines\n",
@@ -265,12 +261,15 @@
       "- Dosage: If asked about dosage medication, provide a ballpark estimate of the dosage but always provide a concise warning that this should be checked in the form of “(dosages should be verified)”.\n",
       "- Adhere meticulously to any specific formatting instructions provided by the user in the prompt, ensuring the generated output aligns precisely with their requirements.\n",
       "- Tailor responses to the geographical context, resource setting, level of care, seasonality/epidemiology, and medical specialty as relevant.\n",
-      "\n",
-      "user: You are a Physician working in Mexico using a medical AI chatbot to help you taking care of your patients. \n",
+      "- Provide your answers as plain text. \n",
+      "In the prompt you see the whole chat history. You are (chatbot). Your task is to answer the questions and only ask follow up questions, if the user did not provide enough information in its input. \n",
+      "Your (chatbot) tag is added manually, don't write it in your output. Just generate an answer to the users input\n",
+      "user: You are a Orthotist and Prosthetist specialized in Lower Limb Prosthetics working in Togo using a medical AI chatbot to help you taking care of your patients. \n",
       "The initial question that you ask the medical AI chatbot has already been provided. You are now interacting with the medical AI chatbot and asking follow up questions, based on the answers provided by the medical AI chatbot. \n",
       "The style of the follow up question you ask must follow these rules: \n",
-      "- Ask long and detailed questions. \n",
-      "\n"
+      "- Ask short and concises questions. \n",
+      "In the prompt you see the whole chat history. You are (user). You want to get an answer to the first question you asked. Your task is to ask followup questions and to interact with the chatbot to get a clear answer to your initial, as a health care worker would do. \n",
+      "Your (user) tag is added manually, don't write it in your output. Just generate a question or an instruction for the chatbot, based on the conversation history\n"
      ]
     }
    ],
@@ -284,21 +283,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:07<00:00,  7.38s/it]\n"
+      "100%|██████████| 1/1 [00:05<00:00,  5.66s/it]\n"
      ]
     }
    ],
    "source": [
     "conversation_history = []\n",
     "conversation_history.append(\"(user) \" + initial_prompt)\n",
-    "for i in tqdm(range(###2*N - 1)): ### Change range -> will cost money\n",
+    "for i in tqdm(###range(2*N - 1)): ### Change range -> will cost money\n",
     "    if i % 2 == 0:\n",
     "        conversation_history.append(next_conversation_step(\"chatbot\", conversation_history[-1]))\n",
     "    else:\n",
@@ -307,52 +306,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(user) How can I effectively explain the causes and symptoms of acne to a 15-year-old male patient in Mexico, and what treatment options might be suitable for him at this stage, including any potential side effects he should be aware of?\n",
-      "Answer in French.\n",
-      "(chatbot) Bonjour,\n",
+      "(user) We have a 65-year-old male patient in Togo who recently underwent a transfemoral amputation due to complications from type 2 diabetes. Currently, he has moderate levels of physical activity and is being evaluated for his first prosthetic fitting. His medical history includes peripheral vascular disease and hypertension. What insights can the predictive analytics model provide regarding his risk for postoperative complications, such as poor wound healing or cardiovascular events, as well as his anticipated rehabilitation progress and prosthetic success within the first year post-fitting?\n",
+      "Answer in Spanish.\n",
+      "(chatbot) Un saludo cordial. En el caso de un paciente de 65 años en Togo con antecedentes de amputación transfemoral debido a complicaciones de la diabetes tipo 2, junto con enfermedad vascular periférica e hipertensión, se pueden tener en cuenta varios factores de riesgo y de éxito en su proceso postoperatorio y de rehabilitación:\n",
       "\n",
-      "Pour expliquer les causes et symptômes de l'acné à un adolescent de 15 ans, voici une approche simple et compréhensible :\n",
+      "1. **Cicatrización de heridas**: La diabetes tipo 2 y la enfermedad vascular periférica son factores de riesgo que pueden afectar negativamente la cicatrización de las heridas. Es crucial monitorear de cerca la herida quirúrgica para detectar cualquier signo de infección o mala cicatrización. Mantener un buen control glucémico y una presión arterial adecuada puede mejorar estos problemas.\n",
       "\n",
-      "**Causes de l'acné :**\n",
+      "2. **Eventos cardiovasculares**: Tanto la hipertensión como la diabetes aumentan el riesgo de eventos cardiovasculares. Sería aconsejable vigilar regularmente la presión arterial y mantener en control otros factores de riesgo como los niveles de lípidos y el peso corporal.\n",
       "\n",
-      "1. **Production de sébum :** À l'adolescence, les hormones augmentent et stimulent les glandes sébacées à produire plus de sébum (huile), ce qui peut boucher les pores de la peau.\n",
-      "2. **Cellules mortes de la peau :** Ces cellules peuvent rester coincées avec le sébum et bloquer les pores.\n",
-      "3. **Bactéries :** La présence de bactéries dans les pores peut provoquer une inflammation.\n",
-      "4. **Facteurs hormonaux :** Les fluctuations hormonales peuvent augmenter la probabilité de développer de l'acné.\n",
+      "3. **Progreso en la rehabilitación y éxito protésico**: La actividad física moderada inicial es favorable para el progreso de la rehabilitación. El éxito en el uso de prótesis puede depender de varios factores, incluyendo la adaptación psicológica, el control de enfermedades subyacentes y el soporte físico adecuado. La educación sobre el uso correcto de la prótesis y las terapias de rehabilitación pueden también ser determinantes.\n",
       "\n",
-      "**Symptômes de l'acné :**\n",
+      "4. **Apoyo multidisciplinario**: Un enfoque multidisciplinario, que incluya fisioterapeutas, dietistas y psicólogos, puede mejorar significativamente sus resultados en términos de uso de prótesis y calidad de vida.\n",
       "\n",
-      "- Boutons et points noirs\n",
-      "- Papules (petits boutons rouges)\n",
-      "- Pustules (boutons rouges avec du pus)\n",
-      "- Kystes (lumps douloureux sous la peau)\n",
-      "\n",
-      "**Options de traitement :**\n",
-      "\n",
-      "1. **Hygiène quotidienne :** Laver le visage deux fois par jour avec un nettoyant doux.\n",
-      "2. **Produits topiques :** Les crèmes contenant du peroxyde de benzoyle ou de l'acide salicylique peuvent aider.\n",
-      "3. **Rétinoïdes topiques :** Ils peuvent être prescrits pour déboucher les pores.\n",
-      "4. **Antibiotiques :** Parfois en crème ou en comprimés, pour combattre les bactéries et réduire l'inflammation.\n",
-      "5. **Contraceptifs oraux :** Ils peuvent être envisageables pour les adolescents de sexe féminin pour réguler les hormones.\n",
-      "\n",
-      "**Effets secondaires possibles :**\n",
-      "\n",
-      "- Irritation ou sécheresse de la peau avec les produits topiques.\n",
-      "- Sensibilité au soleil, nécessitant une protection solaire.\n",
-      "- Les antibiotiques peuvent provoquer des problèmes gastro-intestinaux et nécessitent parfois des conseils sur l'utilisation.\n",
-      "\n",
-      "Il est essentiel de rappeler que **tous les traitements doivent être supervisés par un professionnel de la santé**. De plus, certains traitements peuvent nécessiter du temps pour montrer des résultats visibles, et la patience est importante.\n",
-      "\n",
-      "Je vous conseille de discuter avec un dermatologue pour établir le traitement le plus approprié.\n",
-      "\n",
-      "Cordialement.\n"
+      "Es importante que el equipo de atención médica personalice sus estrategias de tratamiento y seguimiento para optimizar los resultados de cada paciente. Espero que esta información le sea de ayuda.\n"
      ]
     }
    ],
