fixed minor typos

--- a/scripts/gpt_bacht_mode.ipynb
+++ b/scripts/gpt_bacht_mode.ipynb
@@ -83,15 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Batch(id='batch_675b4f73d90c81908d216960e69db7fc', completion_window='24h', created_at=1734037363, endpoint='/v1/chat/completions', input_file_id='file-6dUK8ihfdk8CnXfoszLwdV', object='batch', status='in_progress', cancelled_at=None, cancelling_at=None, completed_at=None, error_file_id=None, errors=None, expired_at=None, expires_at=1734123763, failed_at=None, finalizing_at=None, in_progress_at=1734037369, metadata={'description': 'generate prompts for multiturn interactions for medical instruction tuning, case: batched_prompts_task_x_specialties_x_demographic_x_answerstyle_turn_1c'}, output_file_id=None, request_counts=BatchRequestCounts(completed=20111, failed=0, total=20395))\n",
-      "status = in_progress\n"
+      "Batch(id='batch_675b4f73d90c81908d216960e69db7fc', completion_window='24h', created_at=1734037363, endpoint='/v1/chat/completions', input_file_id='file-6dUK8ihfdk8CnXfoszLwdV', object='batch', status='finalizing', cancelled_at=None, cancelling_at=None, completed_at=None, error_file_id=None, errors=None, expired_at=None, expires_at=1734123763, failed_at=None, finalizing_at=1734040218, in_progress_at=1734037369, metadata={'description': 'generate prompts for multiturn interactions for medical instruction tuning, case: batched_prompts_task_x_specialties_x_demographic_x_answerstyle_turn_1c'}, output_file_id=None, request_counts=BatchRequestCounts(completed=20395, failed=0, total=20395))\n",
+      "status = finalizing\n"
      ]
     }
    ],
