save multiturn up to -3u

--- a/scripts/multiturn_get_batch_prompts.ipynb
+++ b/scripts/multiturn_get_batch_prompts.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -196,15 +196,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20395/20395 [00:00<00:00, 29839.09it/s]"
+      "100%|██████████| 20395/20395 [00:00<00:00, 29391.73it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "batch of 11114 prompts saved to ../results/batched_prompts_task_x_specialties_x_demographic_x_answerstyle_turn_2u.jsonl\n",
-      "IMPORTANT: batches were created for turn 2 and user\n"
+      "batch of 6525 prompts saved to ../results/batched_prompts_task_x_specialties_x_demographic_x_answerstyle_turn_3c.jsonl\n",
+      "IMPORTANT: batches were created for turn 3 and chatbot\n"
      ]
     },
     {
@@ -222,11 +222,11 @@
     "gpt_model = \"gpt-4o\"\n",
     "\n",
     "# Path for input data and to store prompts\n",
-    "situations_name = \"task_x_specialties_x_demographic_x_answerstyle\" # Change this\n",
+    "situations_name = \"task_x_specialties_x_demographic_x_answerstyle\" # Change this if necessary\n",
     "situations_path = \"../results/situations_\" + situations_name + \".jsonl\"\n",
     "multiturn_conv_path = \"../results/multiturn_\" + situations_name + \".jsonl\"\n",
-    "turn = 2 # can be 1, 2 or 3 # Change this\n",
-    "system_is = \"user\" # can be user or chatbot # Change this\n",
+    "turn = 3 # can be 1, 2 or 3 # Change this\n",
+    "system_is = \"chatbot\" # can be user or chatbot # Change this\n",
     "output_path = \"../results/batched_prompts_\" + situations_name + \"_turn_\" + str(turn) + system_is[0] + \".jsonl\"\n",
     "\n",
     "\n",
